<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/faxin_layout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:background="@color/snow">
    <RelativeLayout
            android:id="@+id/main_title_rl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:background="@color/white"
            >
        <TextView
                android:id="@+id/topIm"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:text="@string/send_message_title"
                android:textColor="@color/red"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"/>
    </RelativeLayout>
    <LinearLayout
            android:id="@+id/faxin_bottom"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="8dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_alignParentBottom="true"
            android:background="@color/heavyblue">
        <Button
                android:id="@+id/cancel_btn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textColor="@color/textcolor_snow2black_selecter"
                android:text="@string/faxin_cancel"
                android:textSize="16sp"
                android:gravity="center"
                android:paddingTop="10dip"
                android:paddingBottom="10dip"
                android:background="@drawable/main_gv_item_selector"/>
        <Button
                android:id="@+id/send_message_btn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_marginLeft="1px"
                android:textColor="@color/textcolor_snow2black_selecter"
                android:text="@string/faxin_sendnow"
                android:textSize="16sp"
                android:gravity="center"
                android:background="@drawable/main_gv_item_selector"/>
    </LinearLayout>
    <View
            android:layout_above="@id/faxin_bottom"
            android:layout_height="1px"
            android:layout_width="fill_parent"
            android:background="@color/gray"
            android:id="@+id/bottom_line"/>
    <LinearLayout
            android:id="@+id/faxin_bottom_ll"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="160dip"
            android:layout_alignLeft="@+id/topIm"
            android:layout_above="@+id/bottom_line">
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/round_text"
                android:layout_marginLeft="10dip"
                android:layout_weight="1">
            <EditText
                    android:id="@+id/editMessageEt"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="top"
                    android:paddingLeft="10dip"
                    android:paddingRight="10dip"
                    android:paddingTop="10dip"
                    android:paddingBottom="10dip"
                    android:textColor="@color/black"
                    android:hint="点击此处添加短信内容"
                    android:background="@drawable/round_text"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:layout_weight="3"
                android:layout_marginRight="8dip"
                android:layout_marginLeft="8dip"
                >

            <TextView
                    android:id="@+id/receive_name_Tv"
                    android:layout_marginBottom="5dip"
                    android:text="@string/faxin_name"
                    style="@style/faxinStyle"/>
            <TextView
                    android:id="@+id/receive_nickname_tv"
                    android:layout_marginBottom="5dip"
                    android:text="@string/faxin_nick"
                    style="@style/faxinStyle"/>

            <View android:layout_width="fill_parent"
                  android:layout_height="1dip"
                  android:background="@color/gray"
                  android:layout_marginBottom="5dip"/>
            <TextView
                    android:id="@+id/receive_zc_tv"
                    android:text="@string/faxin_zc"
                    style="@style/faxinStyle"/>
            <TextView
                    android:id="@+id/my_name_tv"
                    android:layout_marginTop="5dip"
                    android:text="@string/faxin_myname"
                    style="@style/faxinStyle"/>
        </LinearLayout>
    </LinearLayout>
    <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/gray"
            android:id="@+id/bottomline"
            android:layout_above="@id/faxin_bottom_ll"/>
    <GridView
            android:id="@+id/contactGridView"
            android:background="@drawable/round_text"
            android:padding="5dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:numColumns="3"
            android:stretchMode="columnWidth"
            android:cacheColorHint="#00000000"
            android:listSelector="#00000000"
            android:layout_margin="6dip"
            android:scrollbars="none"
            android:transcriptMode="alwaysScroll"
            android:focusable="true"
            android:verticalSpacing="1dip"
            android:horizontalSpacing="1dip"
            android:divider="@color/gray"
            android:layout_above="@id/bottomline"
            android:layout_below="@id/main_title_rl">
    </GridView>

</RelativeLayout>